refactor!: added registry based tier calc logics